# Test_Projects

./: README.md
bit_opr/include/: bitOpr_functions.h  bitwise.h
bit_opr/src/: .bitopr_functions.c.swp  bitopr_functions.c  main.c
calc_proj/: CMakeLists.txt
calc_proj/include/: calc.h
calc_proj/src/: calc.c  main.c
calc_proj1/: CMakeLists.txt
calc_proj1/include/: calc.h
calc_proj1/src/: calc.c  main.c
cmd_wapper/: Makefile
cmd_wapper/include/: cmd_fun.h
cmd_wapper/src/: cmd_fun.c  main.c
dirMon_project/: CMakeLists.txt
dirMon_project/include/: backup_utils.h
dirMon_project/src/: create_bkp.c  main.c
lib_project/: README
lib_project/cmakFile_based/: CMakeLists.txt
lib_project/makeFile_based/: Makefile  Makefile_basic  Makefile_old  myprogram
lib_project/makeFile_based/include/: string_functions.h
lib_project/makeFile_based/src/: main.c  math_functions.c  string_functions.c
